--- a/Version 2.0/index.html
+++ b/Version 2.0/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
 	<title></title>
 	<meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
@@ -10,62 +10,57 @@
     <link rel="icon" href="favicon.png" />
 </head>
 <body>
-    <div id="ad">
-    <p align="center"><iframe src="//ads.exoclick.com/iframe.php?idzone=1869350&size=468x60" width="468" height="60" scrolling="no" marginwidth="0" marginheight="0" frameborder="0"></iframe></p>
-    </div>
-<div class="container navbar-offset">
-<div class="row page-content">
-<div class="col-md-12">
-<h1>How strong is your password?</h1>
+    <div class="container navbar-offset">
+        <div class="row page-content">
+            <div class="col-md-12">
+                <h1>How strong is your password?</h1>
 
-<div class="row">
-<div class="col-md-6 col-sm-12">
-<p class="lead">This website is developed solely to prevent people from using common and/or weak password&#39;s on important accounts, etc.</p>
+                <div class="row">
+                    <div class="col-md-6 col-sm-12">
+                    <p class="lead">This website is developed solely to prevent people from using common and/or weak password&#39;s on important accounts, etc.</p>
 
-<p>We do not save <em>passwords</em> entered on our website.</p>
+                    <p>We do not save <em>passwords</em> entered on our website.</p>
 
-<p>This website has some of the most common password&#39;s and when those are enter it&nbsp;will automatically bring your percent to 0%, that is a key sign that your password is insecure and shouldn&#39;t be used and changed <b>asap</b>.</p>
-</div>
+                    <p>This website has some of the most common password&#39;s and when those are enter it&nbsp;will automatically bring your percent to 0%, that is a key sign that your password is insecure and shouldn&#39;t be used and changed <b>asap</b>.</p>
+                    </div>
 
-<div class="col-md-6 col-sm-12">
-<div id="complexify">
-<div classs="form">
-<div class="form-group"><label for="password">Password</label> <input class="form-control" id="password" type="password" /></div>
-</div>
+                <div class="col-md-6 col-sm-12">
+                    <div id="complexify">
+                        <div classs="form">
+                            <div class="form-group">
+                                <label for="password">Password</label> 
+                                <input class="form-control" id="password" type="password" />
+                            </div>
+                        </div>
+                        <div class="progress">
+                            <div class="progress-bar" id="complexity-bar" role="progressbar">
+                            </div>
+                        </div>
+                            <br>
+                            <h1 class="pull-right" id="complexity">0%</h1>
+                            <br>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
-<div class="progress">
-<div class="progress-bar" id="complexity-bar" role="progressbar"></div>
-</div>
+        <div class="col-md-12">
+            <br>
+            <p style="text-align: center;"><em>Please note this website is very early in production and development and I plan to add much more to it <strong>asap</strong>!</em></p>
 
-<p></p>
+            <hr/>
+            </div>
 
-<h1 class="pull-right" id="complexity">0%</h1>
-
-<p></p>
-</div>
-</div>
-</div>
-</div>
-
-<div class="col-md-12">
-<p></p>
-
-<p style="text-align: center;"><em>Please note this website is very early in production and development and I plan to add much more to it <strong>asap</strong>!</em></p>
-
-<hr /></div>
-
-<div class="gist-meta">
-<p style="float:right">Found a bug or have a suggestion? <a href="mailto:hi@fpb.im">Email me</a>.</p>
-This website was developed with ❤ by <a href="http://FPB.im" target="_blank">Francis Baker</a></div>
-</div>
-</div>
-    <div id="ad">
-        <p align="center"><iframe src="//ads.exoclick.com/iframe.php?idzone=1869350&size=468x60" width="468" height="60" scrolling="no" marginwidth="0" marginheight="0" frameborder="0"></iframe></p>
+        <div class="gist-meta">
+        <p style="float:right">Found a bug or have a suggestion? <a href="mailto:hi@fpb.im">Email me</a>.</p>
+        This website was developed with ❤ by <a href="http://FPB.im" target="_blank">Francis Baker</a></div>
+        </div>
     </div>
     </body>
-<script src="/js/jquery-2.1.1.js" type="text/javascript" charset="utf-8"></script>
-<script src="/js/jquery.complexify.banlist.js" type="text/javascript" charset="utf-8"></script>
-<script src="/js/jquery.complexify.js" type="text/javascript" charset="utf-8"></script>
-<script src="/js/main.js" type="text/javascript" charset="utf-8"></script></html>
-<script src="/js/bootstrap.min.js"></script>
-<script src="/js/jquery-2.1.1.js" type="text/javascript" charset="utf-8"></script>
+    <script src="/js/jquery-2.1.1.js" type="text/javascript" charset="utf-8"></script>
+    <script src="/js/jquery.complexify.banlist.js" type="text/javascript" charset="utf-8"></script>
+    <script src="/js/jquery.complexify.js" type="text/javascript" charset="utf-8"></script>
+    <script src="/js/main.js" type="text/javascript" charset="utf-8"></script></html>
+    <script src="/js/bootstrap.min.js"></script>
+    <script src="/js/jquery-2.1.1.js" type="text/javascript" charset="utf-8"></script>
+</html>
