--- a/Version 2.0/index.html
+++ b/Version 2.0/index.html
@@ -23,7 +23,6 @@
 
                     <p>This website has some of the most common password&#39;s and when those are enter it&nbsp;will automatically bring your percent to 0%, that is a key sign that your password is insecure and shouldn&#39;t be used and changed <b>asap</b>.</p>
                     </div>
-
                 <div class="col-md-6 col-sm-12">
                     <div id="complexify">
                         <div classs="form">
@@ -46,11 +45,9 @@
 
         <div class="col-md-12">
             <br>
-            <p style="text-align: center;"><em>Please note this website is very early in production and development and I plan to add much more to it <strong>asap</strong>!</em></p>
-
+            <p style="text-align: center;"><em>Please note this website is very early in production and development and I plan to add much more to it <strong>asap</strong>!</em></p>=
             <hr/>
             </div>
-
         <div class="gist-meta">
         <p style="float:right">Found a bug or have a suggestion? <a href="mailto:hi@fpb.im">Email me</a>.</p>
         This website was developed with ❤ by <a href="http://FPB.im" target="_blank">Francis Baker</a></div>
