Reconstruction + Added Materialize

--- a/Version 2.0/index.html
+++ b/Version 2.0/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>How Strong Is My Password?</title>
 	<meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
-	<link href="https://netdna.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" media="all" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css">
 	<link href="/css/base.css" rel="stylesheet" type="text/css" />
 	<link href="/css/main.css" rel="stylesheet" />
 	<meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport" />
@@ -12,18 +12,7 @@
 <body>
     <div class="container navbar-offset">
         <div class="row page-content">
-            <div class="col-md-12">
-                <h1>How strong is your password?</h1>
-
-                <div class="row">
-                    <div class="col-md-6 col-sm-12">
-                    <p class="lead">This website is developed solely to prevent people from using common and/or weak password&#39;s on important accounts, etc.</p>
-
-                    <p>We do not save <em>passwords</em> entered on our website.</p>
-
-                    <p>This website has some of the most common password&#39;s and when those are enter it&nbsp;will automatically bring your percent to 0%, that is a key sign that your password is insecure and shouldn&#39;t be used and changed <b>asap</b>.</p>
-                    </div>
-                <div class="col-md-6 col-sm-12">
+                  <div class="col-md-6 col-sm-12">
                     <div id="complexify">
                         <div classs="form">
                             <div class="form-group">
@@ -42,22 +31,12 @@
                     </div>
                 </div>
             </div>
-
-        <div class="col-md-12">
-            <br>
-            <p style="text-align: center;"><em>Please note this website is very early in production and development and I plan to add much more to it <strong>asap</strong>!</em></p>=
-            <hr/>
-            </div>
-        <div class="gist-meta">
-        <p style="float:right">Found a bug or have a suggestion? <a href="mailto:hi@fpb.im">Email me</a>.</p>
-        This website was developed with ❤ by <a href="http://FPB.im" target="_blank">Francis Baker</a></div>
-        </div>
     </div>
     </body>
     <script src="/js/jquery-2.1.1.js" type="text/javascript" charset="utf-8"></script>
     <script src="/js/jquery.complexify.banlist.js" type="text/javascript" charset="utf-8"></script>
     <script src="/js/jquery.complexify.js" type="text/javascript" charset="utf-8"></script>
     <script src="/js/main.js" type="text/javascript" charset="utf-8"></script></html>
-    <script src="/js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js"></script>
     <script src="/js/jquery-2.1.1.js" type="text/javascript" charset="utf-8"></script>
 </html>
