--- a/Version 2.0/index.html
+++ b/Version 2.0/index.html
@@ -1,3 +1,13 @@
+<!--/
+*
+* Title: Main CSS 
+* Author: Francis Baker 
+*
+* All rights reserved to Francis Baker. 
+* This repo can be found: https://github.com/Baker/HSIMP
+* 
+/-->
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -5,23 +15,19 @@
 	<meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css">
 	<link href="/css/base.css" rel="stylesheet" type="text/css" />
-	<link href="/css/main.css" rel="stylesheet" />
+	<link href="/css/main.css" rel="stylesheet" type="text/css" />
 	<meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport" />
     <link rel="icon" href="favicon.png" />
 </head>
 <body>
     <div class="container navbar-offset">
-        <div class="row page-content">
+        <div class="row page-content z-depth-1">
                   <div class="col-md-6 col-sm-12">
                     <div id="complexify">
                         <div classs="form">
                             <div class="form-group">
                                 <label for="password">Password</label> 
                                 <input class="form-control" id="password" type="password" />
-                            </div>
-                        </div>
-                        <div class="progress">
-                            <div class="progress-bar" id="complexity-bar" role="progressbar">
                             </div>
                         </div>
                             <br>
@@ -40,3 +46,5 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js"></script>
     <script src="/js/jquery-2.1.1.js" type="text/javascript" charset="utf-8"></script>
 </html>
+
+
