--- a/Version 2.0/index.html
+++ b/Version 2.0/index.html
@@ -33,7 +33,11 @@
     
 </head>
 <body>
-    <div class="container navbar-offset">
+    <div class="container">
+        <div class="row z-depth-1">
+            <h5>Welcome,</h5>
+            <p>This project</p>
+        </div>
         <div class="row page-content z-depth-1">
                   <div class="col-md-6 col-sm-12">
                     <div id="complexify">
@@ -50,7 +54,6 @@
                     </div>
                 </div>
             </div>
-    </div>
     </body>
     <script src="/js/jquery-2.1.1.js" type="text/javascript" charset="utf-8"></script>
     <script src="/js/jquery.complexify.banlist.js" type="text/javascript" charset="utf-8"></script>
