Added Github Commit
This will tell you last time the site was update, and Github.js and its
dependencies.

--- a/Version 2.0/index.html
+++ b/Version 2.0/index.html
@@ -40,10 +40,20 @@
 </head>
 <body>
     <div class="container">
-        <div class="row z-depth-1">
-            <h5>Welcome,</h5>
-            <p>This project</p>
-        </div>
+        <div class="row page-content z-depth-1">
+            <div class="github-commit">
+                      <div class="container">
+                        <div class="commit">
+                          Latest Commit on Github:
+                          &nbsp;&nbsp;
+                          <a href="" class="sha"></a>
+                          &nbsp;&nbsp;
+                          <span class="date"></span>
+                          <a id="github-button" href="https://github.com/Baker/HSIMP" class="btn-flat right grey-text text-lighten-5 waves-effect waves-light hide-on-small-only">Github</a>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
         <div class="row page-content z-depth-1">
                   <div class="col-md-6 col-sm-12">
                     <div id="complexify">
@@ -61,12 +71,13 @@
                 </div>
             </div>
     </body>
-    <script src="/js/jquery-2.1.1.js" type="text/javascript" charset="utf-8"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js" type="text/javascript" charset="utf-8"></script>
     <script src="/js/jquery.complexify.banlist.js" type="text/javascript" charset="utf-8"></script>
     <script src="/js/jquery.complexify.js" type="text/javascript" charset="utf-8"></script>
     <script src="/js/main.js" type="text/javascript" charset="utf-8"></script></html>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js"></script>
-    <script src="/js/jquery-2.1.1.js" type="text/javascript" charset="utf-8"></script>
+    <script src="js/jquery.timeago.min.js"></script>
+    <script src="js/github.js" type="text/javascript" ></script>
 </html>
 
 
