Stripped Main.css
We went ahead and removed all unneeded css styles, these are mostly from
the previous version.

--- a/Version 2.0/index.html
+++ b/Version 2.0/index.html
@@ -41,6 +41,10 @@
 <body>
     <div class="container">
         <div class="row page-content z-depth-1">
+            <div class-"">
+                <h1>Welcome,</h1>
+                <p>This project is 100% open sourced, you can view when it was last updated and the last push to it.</p>
+            </div>
             <div class="github-commit">
                       <div class="container">
                         <div class="commit">
