--- a/Version 2.0/index.html
+++ b/Version 2.0/index.html
@@ -36,14 +36,14 @@
     <link rel="apple-touch-icon" href="img/apple-touch-icon-152x152.png" sizes="152x152">
     <!-- Win8 tile -->
     <meta name="msapplication-TileImage" content="img/apple-touch-icon-144x144.png">
-    <meta name="application-name" content="name" />
-</head>
+    <meta name="application-name" content="How strong is my password" />
+</head> 
 <body>
     <div class="container">
         <div class="row page-content z-depth-1">
-            <div class-"">
-                <h1>Welcome,</h1>
-                <p>This project is 100% open sourced, you can view when it was last updated and the last push to it.</p>
+            <div class="intro">
+                <h1>How strong is your password?</h1>
+                <p>This web application is completely open sourced, we want you to feel safe with testing the strength of your password, but more importantly we want you to use a strong password! <em>This service exists for educational purposes only - we do not storing or collecting your passwords.</em></p>
             </div>
             <div class="github-commit">
                       <div class="container">
