--- a/Version 2.0/index.html
+++ b/Version 2.0/index.html
@@ -21,9 +21,9 @@
     <meta name="keywords" content="password, strength, meter, pw, weak password, secure password, strong password">
         
     <!-- CSS Files -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css">
-	<link href="/css/base.css" rel="stylesheet" type="text/css" />
-	<link href="/css/main.css" rel="stylesheet" type="text/css" />
+    <link rel="stylesheet" type="text/css" href="/css/main.css"/>
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css">
+	
     
     <!-- Favicon -->
     <link rel="icon" href="img/favicon-lock.ico" />
@@ -43,8 +43,8 @@
         <div class="row page-content z-depth-1">
             <div class="intro">
                 <h1>How strong is your password?</h1>
-                <p>This web application is completely open sourced, we want you to feel safe with testing the strength of your password, but more importantly we want you to use a strong password! <em>This service exists for educational purposes only - we do not storing or collecting your passwords.</em></p>
-            </div>
+                <p>This web application is completely open sourced, we want you to feel safe with testing the strength of your password, but more importantly we want you to use a strong password! <br>
+                 <em>This service exists for educational purposes only - we do not storing or collecting your passwords.</em></p>
             <div class="github-commit">
                       <div class="container">
                         <div class="commit">
@@ -58,6 +58,7 @@
                       </div>
                     </div>
                   </div>
+                </div>
         <div class="row page-content z-depth-1">
                   <div class="col-md-6 col-sm-12">
                     <div id="complexify">
@@ -75,11 +76,11 @@
                 </div>
             </div>
     </body>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js" type="text/javascript" charset="utf-8"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js" type="text/javascript" charset="utf-8"></script>
     <script src="/js/jquery.complexify.banlist.js" type="text/javascript" charset="utf-8"></script>
     <script src="/js/jquery.complexify.js" type="text/javascript" charset="utf-8"></script>
     <script src="/js/main.js" type="text/javascript" charset="utf-8"></script></html>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js"></script>
     <script src="js/jquery.timeago.min.js"></script>
     <script src="js/github.js" type="text/javascript" ></script>
 </html>
